# math-tutor

./: .env.example  .gitignore  SECURITY.md  pyproject.toml
.claude/commands/: build.md
math_tutor/: HANDOFF.md  README.md  TASK_HISTORY.md  __init__.py  backfill_response_html.py  challenge_builder.py  cli.py  mcq_generator.py  site_builder.py
math_tutor/challenges_src/: exam.html  exams.json  index.html  master_questions.json  result.php  submit.php  whoami.php
math_tutor/scripts/: clear_challenge_results.php
